--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My IT Dashboard STUDIO Pier Luigi</title>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
     :root {
@@ -34,7 +35,7 @@
 
     body {
       margin: 0;
-      font-family: 'Segoe UI', sans-serif;
+      font-family: 'Orbitron', sans-serif;
       background-color: var(--color-bg);
       color: var(--color-text);
       display: flex;
@@ -48,6 +49,12 @@
       padding: 20px;
       height: 100vh;
       box-shadow: 2px 0 5px rgba(0,0,0,0.2);
+      position: fixed;
+      left: 0;
+      top: 0;
+      bottom: 0;
+      overflow-y: auto;
+      z-index: 1000;
     }
 
     .sidebar h2 {
@@ -71,15 +78,18 @@
     }
 
     .main {
+      margin-left: 250px;
       flex: 1;
     }
 
     header {
       background-color: var(--color-card);
-      padding: 20px;
+      padding: 20px 60px 20px 20px;
       text-align: center;
       box-shadow: 0 2px 5px rgba(0,0,0,0.3);
-      position: relative;
+      position: sticky;
+      top: 0;
+      z-index: 900;
     }
 
     header h1 {
@@ -146,7 +156,7 @@
 
     iframe {
       width: 100%;
-      height: 500px;
+      height: 400px;
       border: none;
       border-radius: 8px;
       margin-top: 10px;
@@ -160,12 +170,11 @@
     }
 
     @media (max-width: 768px) {
-      body {
-        flex-direction: column;
-      }
       .sidebar {
-        width: 100%;
-        height: auto;
+        display: none;
+      }
+      .main {
+        margin-left: 0;
       }
     }
   </style>
